# JOB_Hunt

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.agents/rules/: code-quality.md  logic-constraints.md
credentials/: .gitkeep
data/: .gitkeep
prompts/: email_draft.txt
scratch/: .gitkeep
server/: __init__.py  cli.py  config.py  dependencies.py  main.py  models.py
server/routers/: __init__.py  webhook.py
server/services/: __init__.py  db.py  email_extractor.py  gmail_client.py  hitl.py  llm_client.py
server/utils/: __init__.py  resume.py
tampermonkey/: linkedin_extractor.user.js
tests/: __init__.py  conftest.py  test_db.py  test_email_extractor.py  test_gmail_client.py  test_llm_client.py  test_models.py  test_webhook.py
